--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,10 @@ dependencies:
   http: ^0.13.4
 
 dev_dependencies:
-  flutter_driver:
+  flutter_test:
+   sdk: flutter
+  integration_test:
     sdk: flutter
-  test: ^1.5.0
-  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
